# piscine-python-42

./: README.md
Piscineday0/ex00/: Hello.py
Piscineday0/ex02/: find_ft_type.py
Piscineday0/ex04/: whatis.py
Piscineday0/ex06/: filterstring.py  ft_filter.py
ex01/: format_ft_time.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py
ex09/: pyproject.toml  setup.py  tester.py
ex09/ft_package/: __init.py__.py  __init__.py  ft_count_list.py
module00/ex00/: Hello.py
module00/ex03/: NULL_not_found.py
module00/ex04/: whatis.py
module00/ex05/: building.py
module00/ex07/: sos.py
module00/ex09/: README.md
module00/ex09/ft_package/: ft_count_list.py
module01/ex00/: give_bmi.py
module01/ex01/: array2D.py
module01/ex02/: load_image.py
