[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Lnaidu", email="lnaidu@student.42nice.com" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
